force-app/main/default/objects/Product2/fields/Authorized_Signature__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized Signature</label>
    <type>Checkbox</type>
</CustomField>