force-app/main/default/objects/Product2/fields/Check_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Check_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Eligibility</label>
    <type>Checkbox</type>
</CustomField>