force-app/main/default/objects/Product2/fields/Compensable__c.field-meta.xml
<CustomField>
    <fullName>Compensable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compensable</label>
    <type>Checkbox</type>
</CustomField>