force-app/main/default/objects/Product2/fields/Configuration_File__c.field-meta.xml
<CustomField>
    <fullName>Configuration_File__c</fullName>
    <label>Configuration File</label>
    <length>220</length>
    <type>Text</type>
</CustomField>