force-app/main/default/objects/Product2/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>