force-app/main/default/objects/Product2/fields/Inclusive_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Inclusive_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inclusive Eligibility</label>
    <type>Checkbox</type>
</CustomField>