force-app/main/default/objects/Product2/fields/Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Status__c</fullName>
    <label>Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supported</fullName>
            </value>
            <value>
                <fullName>Supported/Not Reported</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
                <isActive>false</isActive>
                <label>n/a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>