force-app/main/default/objects/Product2/fields/MTBF__c.field-meta.xml
<CustomField>
    <fullName>MTBF__c</fullName>
    <label>MTBF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>