force-app/main/default/objects/Product2/fields/MTTR__c.field-meta.xml
<CustomField>
    <fullName>MTTR__c</fullName>
    <label>MTTR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>