force-app/main/default/objects/Product2/fields/Orderable__c.field-meta.xml
<CustomField>
    <fullName>Orderable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orderable</label>
    <type>Checkbox</type>
</CustomField>