force-app/main/default/objects/Product2/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <label>Part #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>