force-app/main/default/objects/Product2/fields/Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost__c</fullName>
    <label>Product Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>