force-app/main/default/objects/Product2/fields/Product_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Product External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>