force-app/main/default/objects/Product2/fields/Product_Level__c.field-meta.xml
<CustomField>
    <fullName>Product_Level__c</fullName>
    <label>Product Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>