force-app/main/default/objects/Product2/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <label>Revision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>AbbVie</fullName>
            </value>
            <value>
                <fullName>AbbVie European CRM</fullName>
            </value>
            <value>
                <fullName>Acadia</fullName>
            </value>
            <value>
                <fullName>Acclarent</fullName>
            </value>
            <value>
                <fullName>Actavis</fullName>
            </value>
            <value>
                <fullName>Actavis Canada</fullName>
            </value>
            <value>
                <fullName>Agios</fullName>
            </value>
            <value>
                <fullName>Algeta</fullName>
            </value>
            <value>
                <fullName>Alkermes</fullName>
            </value>
            <value>
                <fullName>Allergan</fullName>
            </value>
            <value>
                <fullName>Alnylam</fullName>
            </value>
            <value>
                <fullName>Amgen</fullName>
            </value>
            <value>
                <fullName>Animas</fullName>
            </value>
            <value>
                <fullName>ASP</fullName>
            </value>
            <value>
                <fullName>ASTRAZENECA UK</fullName>
            </value>
            <value>
                <fullName>Aveeno</fullName>
            </value>
            <value>
                <fullName>Balt</fullName>
            </value>
            <value>
                <fullName>BAYER UK</fullName>
            </value>
            <value>
                <fullName>BePatient</fullName>
            </value>
            <value>
                <fullName>BHP</fullName>
            </value>
            <value>
                <fullName>BHP-MSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>