force-app/main/default/objects/Product2/fields/Service_Product__c.field-meta.xml
<CustomField>
    <fullName>Service_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Product</label>
    <type>Checkbox</type>
</CustomField>