force-app/main/default/objects/Product2/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>