force-app/main/default/objects/Product2/fields/Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>Structure_Type__c</fullName>
    <label>Structure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customizable</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
                <isActive>false</isActive>
                <label>n/a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>