force-app/main/default/objects/Product2/fields/Track_as_Asset__c.field-meta.xml
<CustomField>
    <fullName>Track_as_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track as Asset</label>
    <type>Checkbox</type>
</CustomField>