force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessorial</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Call Forwarding</fullName>
            </value>
            <value>
                <fullName>Call Waiting</fullName>
            </value>
            <value>
                <fullName>Commercial Bundle</fullName>
            </value>
            <value>
                <fullName>Commodity</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Compound</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Dummy Product Type</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Life &amp; Annuity</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Lot</fullName>
            </value>
            <value>
                <fullName>Market</fullName>
            </value>
            <value>
                <fullName>Non-Network</fullName>
            </value>
            <value>
                <fullName>Option Group</fullName>
            </value>
            <value>
                <fullName>Partner Program</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
            <value>
                <fullName>Personal Lines Insurance</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Offer</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Promotional Item</fullName>
            </value>
            <value>
                <fullName>Promotion Group Membership</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Special Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>