force-app/main/default/objects/Product2/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Currency Unit</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Dollar</fullName>
            </value>
            <value>
                <fullName>Dozen</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Gram</fullName>
            </value>
            <value>
                <fullName>Half Pallet</fullName>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Kilogram</fullName>
            </value>
            <value>
                <fullName>Litre</fullName>
            </value>
            <value>
                <fullName>mg</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Ounce</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Per Day</fullName>
            </value>
            <value>
                <fullName>Per Gigabyte</fullName>
            </value>
            <value>
                <fullName>Per kWh</fullName>
            </value>
            <value>
                <fullName>Per Message</fullName>
            </value>
            <value>
                <fullName>Per Minute</fullName>
            </value>
            <value>
                <fullName>Per Month</fullName>
            </value>
            <value>
                <fullName>Per Person</fullName>
            </value>
            <value>
                <fullName>Per Quarter</fullName>
            </value>
            <value>
                <fullName>Per Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>