force-app/main/default/objects/Product2/fields/Version_Status__c.field-meta.xml
<CustomField>
    <fullName>Version_Status__c</fullName>
    <label>Version Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>30 days Delinquent</fullName>
            </value>
            <value>
                <fullName>60 days Delinquent</fullName>
            </value>
            <value>
                <fullName>510K Submitted</fullName>
            </value>
            <value>
                <fullName>Account Terminated</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Charge Off</fullName>
            </value>
            <value>
                <fullName>Clinical Trial</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Customer Owned</fullName>
            </value>
            <value>
                <fullName>Customer Submitted</fullName>
            </value>
            <value>
                <fullName>Damage Protection</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Doubtful</fullName>
            </value>
            <value>
                <fullName>Expiring Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>